fix: equal width for last collection tile on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -198,7 +198,7 @@ img {
 }
 
 .collection-grid > * {
-  width: calc(50% - 0.5rem);
+  flex: 0 0 calc(50% - 0.5rem);
 }
 
 @media (min-width: 768px) {
@@ -206,7 +206,7 @@ img {
     gap: 3rem 1.5rem;
   }
   .collection-grid > * {
-    width: calc(33.333% - 1rem);
+    flex: 0 0 calc(33.333% - 1rem);
   }
 }
 
